# Excellize

./: Excellize.cabal  LICENSE  README.md
src/: Main.hs
